2004-09-27  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/xdr_intXX_t.c: Add xdr_quad_t and xdr_u_quad_t aliases.
	* sunrpc/rpc/xdr.h: Declare xdr_quad_t and xdr_u_quad_t.
	* sunrpc/rpc_parse.c (get_type): Use "quad_t" for TOK_HYPER.
	Otherwise isvectordef will loop infinitely if typedef hyper int64_t
	is seen.
	(unsigned_dec): Use "u_quad_t" for similar reasons.
	* sunrpc/Versions: Export xdr_quad_t and xdr_u_quad_t.

2004-09-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/bits/waitstatus.h (__WIFSIGNALED): Simplify bit
	twiddling in last change.

	* posix/tst-waitid.c (do_test): Add tests for waitpid with WCONTINUED.

	[BZ #409]
	* posix/sys/wait.h [__WIFCONTINUED] (WIFCONTINUED): New macro.
	* stdlib/stdlib.h [__WIFCONTINUED] (WIFCONTINUED): New macro.
	* sysdeps/generic/bits/waitstatus.h (__W_CONTINUED): New macro.
	[WCONTINUED] (__WIFCONTINUED): New macro.
	(__WIFSIGNALED): Rewritten to exclude __W_CONTINUED value, and have no
	branches.

	* sysdeps/unix/sysv/linux/waitid.c (do_waitid): Add fifth argument to
	all three syscall uses, not just one!

2004-09-26  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/alphaev6/memcpy.S: Mark .prologue.
	* sysdeps/unix/alpha/sysdep.h (LEAF, ENTRY): Align entry points
	to 16 byte boundaries.

2004-09-26  Ulrich Drepper  <drepper@redhat.com>

	* elf/readlib.c (process_file): Before complaining about too-short
	file, check that it potentially be an ELF file.  Also complain about
	empty files.  [BZ #151].

	* scripts/test-installation.pl: Fix ld.so recognition for new
	LD_TRACE_LOADED_OBJECTS output format.
	Patch by <jsberg04+computing.glibc@ftml.net>  [BZ #407].

	* elf/dl-support.c (_dl_non_dynamic_init): Fix cleaning of
	environment.  [BZ #384]

	* sunrpc/clnt_udp.c (is_network_up): Use getifaddrs instead of ioctl.
	* sunrpc/get_myaddr.c (get_myaddress): Likewise.
	* sunrpc/pmap_clnt.c (__get_myaddress): Likewise.
	* sunrpc/pmap_rmt.c (getbroadcastnets): Likewise.  Change interface